fixing the gap in featured-info-container

--- a/styles/components/featured.css
+++ b/styles/components/featured.css
@@ -36,6 +36,12 @@
     margin-bottom: 0.25em;
 }
 
+.featured__info-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
 .featured__tech-stack {
     padding: 0;
     list-style: none;
@@ -100,7 +106,7 @@
     .featured__info-container {
         display: flex;
         flex-wrap: wrap;
-        gap: 1rem;
+        gap: 1.5rem;
     }
     
     .featured__info-container div {
